# yandex-kafka-streams

./: README.md  docker-compose.yaml
agent/: .env  .gitignore  Dockerfile  pyproject.toml
agent/src/: .dockerignore  config.py  main.py  schemas.py
consumer/: .env  .gitignore  Dockerfile  pyproject.toml
consumer/src/: config.py  main.py
consumer/src/consumer/: routers.py  schemas.py  service.py
consumer/src/consumer/endpoints/: health.py
producer/: .env  Dockerfile  pyproject.toml
producer/src/: config.py  main.py
producer/src/producer/: routers.py
producer/src/producer/endpoints/: kafka.py
