[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Sakharov Alexander <mail@asakharov.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = {extras = ["avro"], version = "^2.10.0"}
loguru = "^0.7.3"
pydantic-avro = "^0.9.0"
pydantic-settings = "^2.9.1"
faust-streaming = "^0.11.3"
faust-streaming-rocksdb = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
